# sysload

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: uninstall.cmake.in
example/: main.c
include/: sysload.h
src/: sysload.c
tests/: test_sysload.c
